tests/query_errors/pipeline_in/error.txt
Error: 
    4 | end;
    5 | 
    6 | create pipeline in;
      | ^^^^^^^^^^^^^^^^^^ Name `in` is already in use for another node, please use another name.
    7 | select event from in into in;
    8 | select event from in into out;